add fake obstacle publish ; add pathArray msg (no use)

--- a/lattice_planner/CMakeLists.txt
+++ b/lattice_planner/CMakeLists.txt
@@ -6,12 +6,26 @@ find_package(catkin REQUIRED COMPONENTS
   nav_msgs
   roscpp
   rospy
+  visualization_msgs
+  message_generation
+)
+
+
+add_message_files(
+        FILES
+        pathArray.msg
+)
+
+generate_messages(
+        DEPENDENCIES
+        std_msgs
+        nav_msgs
 )
 
 catkin_package(
 #  INCLUDE_DIRS include
 #  LIBRARIES SimplePathPlanner
-#  CATKIN_DEPENDS geometry_msgs nav_msgs roscpp rospy
+  CATKIN_DEPENDS geometry_msgs nav_msgs roscpp rospy std_msgs message_runtime
 #  DEPENDS system_lib
 )
 
@@ -19,6 +33,13 @@ add_executable(simple_path_planner
         src/simple_path_planner.cpp
         )
 target_link_libraries(simple_path_planner
+        ${catkin_LIBRARIES}
+        )
+
+add_executable(fake_obstacle_publisher
+        src/fake_obstacle_publisher.cpp
+        )
+target_link_libraries(fake_obstacle_publisher
         ${catkin_LIBRARIES}
         )
 
